# conductor

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build.sh  clean.sh  install.sh
src/: add_shortcut.py  constants.py  error_codes.py  main.py
src/conductor/: __main__.py  add_shortcut.py  error_codes.py  steam_helper.py
src/conductor/cli/: __main__.py
src/conductor/cli/commands/add_shortcut/: README.md  __init__.py  error_codes.py
src/conductor/cli/commands/info/: README.md  __init__.py
src/conductor/lib/: steam_helper.py  vdf_file.py
